--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* Clock */
+
 * {
   box-sizing:border-box;
 }
@@ -24,7 +26,7 @@ body {
   position:absolute;
   top:282px;
   left:282px;
-  background:#A9EB5B;
+  background:#666;
   z-index:9999;
   border-radius:50%;
 }
@@ -75,4 +77,21 @@ span {
   max-width:100%;
 }
 
+/* Day/Night */
 
+.day {
+  background: #ffeabf;
+}
+
+.day p{
+  color:#333;
+  
+}
+
+.night {
+  background: #333;
+}
+
+.night p{
+  color: #fff;
+}
