--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,46 @@
-/* Clock */
+/* Cloud */
 
-* {
-  box-sizing:border-box;
+.cloud, .cloud:before, .cloud:after {
+  position: absolute;
+  width: 150px;
+  height: 90px;
+  background: #fff;
+  -webkit-border-radius: 100px / 50px;
+  border-radius: 100x / 50px;
+}
+
+.cloud { 
+  top: 100px;
+  -webkit-animation: cloud 60s infinite linear;
+          animation: cloud 60s infinite linear;
+ 
+}
+
+.cloud:nth-child(3n) { 
+  top: 250px;
+  -webkit-animation: cloud 45s infinite linear;
+          animation: cloud 45s infinite linear;
+ 
+}
+
+@-webkit-keyframes cloud {
+    0%   { left: -100px; }
+    100% { left: 3000px; } 
+}
+
+@keyframes cloud {
+    0%   { left: -100px; }
+    100% { left: 3000px; } 
+}
+
+.cloud:before {
+  content: '';
+  left: 50px;
+}
+.cloud:after {
+  content: '';
+  left: 25px;
+  top: -10px;
 }
 
 h1{
@@ -12,12 +51,13 @@ body {
   text-align:center;
   padding:10px;
   font-size: 30px;
-  
+  font-family: 'Open Sans', sans-serif;
+ 
  
 }
 
 
-
+/* clock */
 .clock {
   width:600px;
   height:600px;
@@ -95,6 +135,7 @@ a{
 .day {
   background: url("../img/day.png") no-repeat center center fixed;
   background-size: cover;
+
 }
 
 .sunset {
@@ -110,12 +151,13 @@ a{
 
 
 
+
 /*media queries*/
 @media screen and ( max-width: 1024px ) {
   
   .clock {
-  width:100%;
-  height:100%;
+  width:600px;
+  height:600px;
   border-radius:50%;
   background:#019CD5;
   margin:auto;
